# TRESC

./: .gitattributes  .gitignore  Atoms.f90  CITATION.cff  CMakeLists.txt  CMakelists.txt  Fundamentals.f90  GRysroot.f90  Hamiltonian.f90  Indicator.f90  LICENSE  Rys.f90  Rysdata.f90  SCF.f90  TRESC.args.json  TRESC.sln  TRESC.vfproj  debug.sh  gridsettings.ini  integral_v_2e_os_prism_optreport.txt  main.f90  optreport.txt  readme  readme.md  release.sh  settings.ini  tresc.sh  tshell.sh
basis/: DKH-def2-QZVPP.gbs  DKH-def2-TZVP(-f).gbs  DKH-def2-TZVP.gbs  DKH-def2-TZVPP.gbs  ZORA-def2-SV(P).gbs  ZORA-def2-SVP.gbs  ZORA-def2-TZVP(-f).gbs  ZORA-def2-TZVPP.gbs  aug-cc-pcvdz-dk.gbs  aug-cc-pcvqz-dk.gbs  aug-cc-pcvtz-dk.gbs  aug-cc-pvdz-dk.gbs  aug-cc-pvqz-dk.gbs  aug-cc-pvtz-dk.gbs  cc-pcvdz-dk.gbs  cc-pcvqz-dk.gbs  cc-pcvtz-dk.gbs  cc-pv5z-dk.gbs  cc-pvdz-dk.0.gbs  cc-pvdz-dk.gbs  cc-pvqz-dk.gbs  cc-pvtz-dk.gbs  def2-svp.gbs  def2-tzvp.gbs  def2-tzvpp.gbs  dkh-def2-sv(p).gbs  dkh-def2-svp-o.gbs  dkh-def2-svp.gbs  jorge-5zp-dkh.gbs  jorge-6zp-dkh.gbs  jorge-dzp-dkh.gbs  jorge-qzp-dkh.gbs  jorge-tzp-dkh.gbs  ma-DKH-def2-QZVPP.gbs  ma-DKH-def2-SV(P).gbs  ma-DKH-def2-SVP.gbs  ma-DKH-def2-TZVP(-f).gbs  ma-ZORA-def2-SV(P).gbs  ma-ZORA-def2-TZVPP.gbs  ma-dkh-def2-tzvp.gbs  (+19 more)
docs/: Error_in_t_integration.py  V_Itegral_1e test.nb  V_Itegral_2e test.nb  repo_overview_zh.md
docs/Derivation of modified DKH Hamiltonian and 2-component electron correlation/: Derivation of SRTP-DKH Hamiltonian and 2-component electron correlation.lyx  coefficient of Pauli vector rule of SRS.nb  commuting matrices of Dirac matrices.nb  expansion of the SRS in p and pi.nb
docs/High-speed DCB Hamiltonian in non-inertial frame and SORP model/: High-speed DCB Hamiltonian in non-inertial frame and SORP model.lyx
docs/Higher order Thomas effect/: Thomas Precession.nb  eigenvector.nb
docs/Thomas dynamic and spin pseudo-vector(tensor)/: Thomas Dynamic.nb  拟向变换Hamiltonian.nb  相对论性量子化学.nb
example/: Gaujob.gjf  Gaujob.out  carbene-3et(guess=read).tot  carbene-3et.gjf  carbene-3et.tip  carbene-3et.tot  carbene-3et.xyz
example/C6H5+/: C6H5+.esc  C6H5+.gjf  C6H5+.out  C6H5+.xyz
example/CH2/: CH2.esc  CH2.gjf  CH2.out  CH2.xyz
example/FeO/: FeO.esc  FeO.gjf  FeO.out  FeO.xyz
example/FeO+/: FeO+.esc  FeO+.gjf  FeO+.out  FeO+.xyz
example/SCN/: SCN.esc  SCN.gjf  SCN.out  SCN.xyz
examples/[CH2]/: CH2.esc  CH2.gjf  CH2.out  CH2.xyz
examples/[CO3]_1etR_PBE0_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.emd4  CO3.esc  CO3.molden  CO3.py
examples/[CO3]_1etR_PBE0_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.esc  CO3.out  CO3.tre  CO3.xyz
examples/[CO3]_1etU_PBE0_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.esc  CO3.molden  CO3.out  CO3.tre
examples/[CO3]_1etU_PBE0_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.esc  CO3.out
examples/[CO3]_1et_BHandHLYP_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.esc
examples/[CO3]_1et_BHandHLYP_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.esc
examples/[CO3]_3et_BHandHLYP_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.esc  CO3.tre
examples/[CO3]_3et_BHandHLYP_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.esc  CO3.tre  CO3.xyz
examples/[CO3]_3et_PBE0_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.esc  CO3.molden  CO3.py  CO3.tre
examples/[CO3]_3et_PBE0_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.emd4  CO3.esc  CO3.tre
examples/[CO3]_BS1et_BHandHLYP_DKH-def2-SVP/NR/: CO3.ao2mo  CO3.esc  CO3.tre
examples/[CO3]_BS1et_BHandHLYP_DKH-def2-SVP/pVp/: CO3.ao2mo  CO3.esc  CO3.tre
examples/[Fe(CO)4]_1et_PBE0_DKH-def2-SVP/NR/: FeCO4.ao2mo  FeCO4.esc  FeCO4.molden  FeCO4.out  FeCO4.tre
examples/[Fe(CO)4]_1et_PBE0_DKH-def2-SVP/pVp/: FeCO4.ao2mo  FeCO4.emd4  FeCO4.esc  FeCO4.molden  FeCO4.out  FeCO4.py  FeCO4.tre
examples/[FeO]+/: FeO+.esc  FeO+.gjf  FeO+.out  FeO+.xyz
examples/[HO-Fe-O]3+/: HO-Fe-O-5et.esc  HO-Fe-O-5et.gjf  HO-Fe-O-5et.out  HO-Fe-O-5et.xyz
examples/[HO-Fe-O]3+_minima_5et_DKH-def2-SVP_pVp2ewithSRTP/: HO-Fe-O.ao2mo  HO-Fe-O.esc  HO-Fe-O.xyz
examples/[HO-Fe-O]3+_minima_5et_DKH-def2-SVP_pVp2ewithSRTP/HO-Fe-O.molden.d/: HO-Fe-O-imgpart1.molden.input  HO-Fe-O-imgpart2.molden.input  HO-Fe-O-realpart1.molden.input  HO-Fe-O-realpart2.molden.input
examples/[HO-Fe-O]3+_non-minima_5et_DKH-def2-SVP_pVp2ewithSRTP/: HO-Fe-O.ao2mo  HO-Fe-O.esc  HO-Fe-O.xyz
examples/[HO-Fe-O]3+_non-minima_5et_DKH-def2-SVP_pVp2ewithSRTP/HO-Fe-O.molden.d/: HO-Fe-O-imgpart1.molden.input  HO-Fe-O-imgpart2.molden.input  HO-Fe-O-realpart1.molden.input  HO-Fe-O-realpart2.molden.input
examples/[Ni-C2H4](1-et)/: Ni0-C2H4.esc  Ni0-C2H4.inp  Ni0-C2H4.out  Ni0-C2H4.xyz
examples/[Ni-C2H4](3-et)/: Ni0-C2H4.esc  Ni0-C2H4.inp  Ni0-C2H4.out  Ni0-C2H4.xyz
examples/[Ni-C2H4]_1et_x2c-SVPall-2c_pVp1e/: Ni0-C2H4.ao2mo  Ni0-C2H4.esc  Ni0-C2H4.xyz
examples/[Ni-C2H4]_1et_x2c-SVPall-2c_pVp2e/: Ni0-C2H4.ao2mo  Ni0-C2H4.esc  Ni0-C2H4.xyz
examples/[Ni-C2H4]_3et_DKH-def2-SVP_pVp1e/: Ni0-C2H4.ao2mo  Ni0-C2H4.esc  Ni0-C2H4.xyz
examples/[Ni-C2H4]_3et_DKH-def2-SVP_pVp2e/: Ni0-C2H4.ao2mo  Ni0-C2H4.esc  Ni0-C2H4.xyz
examples/[Ni-C2H4]_3et_PBE0_DKH-def2-SVP/NR/: Ni0-C2H4.py  (+7 more)
examples/[SCN]/: SCN.esc  SCN.gjf  SCN.inp  SCN.out  SCN.xyz
examples/[SCN]_2et_x2c-SVPall-2c_pVp1e/: SCN.ao2mo  SCN.esc  SCN.xyz
examples/[SCN]_2et_x2c-SVPall-2c_pVp2e/: SCN.ao2mo  SCN.esc  SCN.xyz
include/: atoms.mod  functional.mod  fundamentals.mod  grysroot.mod  hamiltonian.mod  lebedev.mod  representation.mod  rys.mod  rysdata.mod  scf.mod  xc_f03_funcs_m.mod  xc_f03_lib_m.mod
scripts/: 2cvis.py  Error_in_t_integration.py  TRESCplot.py  batch_plot.py  gbsmod.py  gjf2xyz.py  scf_plot.py
src/: Atoms.f90  Functional.f90  Fundamentals.f90  GRysroot.f90  Hamiltonian.f90  Indicator.f90  Lebedev.f90  Representation.f90  Rys.f90  Rysdata.f90  SCF.f90  TRESC.f90  Tkernel.f90  main.f90
tkernel/: Atoms.f90  Functional.f90  Fundamentals.f90  GRysroot.f90  Hamiltonian.f90  Lebedev.f90  Representation.f90  Rys.f90  SCF.f90  Tkernel.f90
vis2c/: __init__.py  atomic.py  bond.py  cub1c.py  cub2c.py  dataload.py  fileconv.py  gbsmod.py  mog2c.py  plot2D.py  plot2d.py  plot3D.py  plot3d.py  pro1c.py  pro2c.py  real3d.py  vis1c.py  vis2c.py  viskit.py
(+184 files in other folders)
